--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -5,16 +5,16 @@
 		<p class='p-0 mb-4 header-text'>The Place of His Love</p>
 
 		<ul class='list-unstyled'>
-			<li class='mb-3 p-2' (click)='setActiveTab("addAisles")' [class.active]='tabs.addAisles'>
+			<li class='mb-3 p-2' (click)='setActiveTab("addAisles", true)' [class.active]='tabs.addAisles'>
 				<a class='text-white'>Add Aisles</a>
 			</li>
-			<li class='mb-3 p-2' (click)='setActiveTab("viewAisles")' [class.active]='tabs.viewAisles'>
+			<li class='mb-3 p-2' (click)='setActiveTab("viewAisles", true)' [class.active]='tabs.viewAisles'>
 				<a class='text-white'>View Aisles</a>
 			</li>
-			<li class='mb-3 p-2' (click)='setActiveTab("addSteward")' [class.active]='tabs.addSteward'>
+			<li class='mb-3 p-2' (click)='setActiveTab("addSteward", true)' [class.active]='tabs.addSteward'>
 				<a class='text-white'>Add Steward</a>
 			</li>
-			<li class='mb-3 p-2' (click)='setActiveTab("getCracking")' [class.active]='tabs.getCracking'>
+			<li class='mb-3 p-2' (click)='setActiveTab("getCracking", true)' [class.active]='tabs.getCracking'>
 				<a class='text-white'>Get Cracking</a>
 			</li>
 			
