--- a/src/app/components/add-aisle/add-aisle.component.html
+++ b/src/app/components/add-aisle/add-aisle.component.html
@@ -9,13 +9,13 @@
 		
 		<form [formGroup]="aisleForm" (ngSubmit)='addAisle(aisleForm)'>
 			<div class='form-group mb-4'>
-				<input type="text" formControlName="name" class='form-control form-control-sm' placeholder="Aisle Name">
+				<input type="text" formControlName="name" class='form-control' placeholder="Aisle Name">
 			</div>
 			<div class='form-group mb-4'>
-				<input type="text" formControlName="coordinator" class='form-control form-control-sm' placeholder="Aisle Coordinator">
+				<input type="text" formControlName="coordinator" class='form-control' placeholder="Aisle Coordinator">
 			</div>
 			<div class='form-group mb-4'>
-				<select class='custom-select' formControlName='rows'>
+				<select class='custom-select form-control-sm' formControlName='rows'>
 					<option value='1'>1</option>
 					<option value='2'>2</option>
 					<option value='3'>3</option>
