--- a/src/app/components/add-steward/add-steward.component.css
+++ b/src/app/components/add-steward/add-steward.component.css
@@ -1,15 +1,15 @@
 
+
 :host
 {
 	width:100%;
 	font-family:'Quicksand', sans-serif;
 }
 
-.header-text, .add-aisle-main
+.header-text, .add-steward-main
 {
 	background:rgba(0,0,0,0.1);
 }
-
 
 button
 {
