--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,19 +1,17 @@
 <div class='container-fluid d-flex align-items-center'>
 
-	<div class='overlay'>
-		
-	</div>
+	<div class='overlay'></div>
 
-	<div class='row w-100 d-flex justify-content-center'>
+	<div class='row d-flex justify-content-center content-parent'>
 		
-		<div class='col-8 row'>
+		<div class='col-md-10 col-lg-8 row d-flex justify-content-center justify-content-sm-end justify-content-md-start'>
 			
-			<div class='col-6 content-box text-white p-4'>
+			<div class='col-11 col-sm-8 col-md-6 content-box text-white p-4'>
 				And ye shall serve the LORD your God, and he shall bless thy bread, and thy water; and I will
 				take sickness away from the midst of thee.
 				<br/>
 				<p class='p-0 py-2'> Exodus 23:25</p>
-				<a routerLink='/dashboard' class='p-2'>Begin</a>
+				<a routerLink='/dashboard' class='p-2' style='text-align:center;'>Begin</a>
 			</div>
 		</div>
 	</div>
