--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -1,9 +1,50 @@
  .container-fluid
  {
  	position:relative;
- 	height:100vh;
+ 	min-height:100vh;
  	background:url("../../../assets/Images/Home/noisy_net.png");
  }
+
+
+ .sidebar-container
+ {
+ 	position:fixed;
+	height:100%;
+ }
+
+
+div.navtoggle
+{
+	position: absolute;
+ 	top:3vh;
+    left:3vh;
+	cursor:pointer;
+	padding:10px 0;
+	width:25px;
+	z-index:1;
+}
+
+div.navtoggle span, div.navtoggle span:after, div.navtoggle span:before
+{
+	position:absolute;
+	  display: block;
+	  width:100%;
+	  height:2px;
+	  background: #fff;
+}
+
+div.navtoggle span:after, div.navtoggle span:before
+{
+	  top:-8px;
+	  left:0;
+	  content: '';
+	  background: #fff;
+}
+
+div.navtoggle span:before
+{
+	top:8px;
+}
 
  .tab-body
  {
