--- a/src/app/components/view-aisle/view-aisle.component.html
+++ b/src/app/components/view-aisle/view-aisle.component.html
@@ -1,3 +1,20 @@
-<p>
-  view-aisle works!
-</p>
+
+<div class='aisles-body p-4 text-white'>
+	
+	<ul class='list-unstyled' *ngIf='aisles.length > 0'>
+		<li *ngFor="let aisle of aisles" class='d-flex justify-content-between aisle align-items-center my-3'>
+			<div>
+				<p class='m-0 mb-2 aisle-name'>{{ aisle.name }}</p>
+				<p class='m-0 mb-2'>{{ aisle.coordinator }}</p>
+				<p class='m-0'>{{ aisle.rows }} rows</p>	
+			</div>
+			<div>
+				<div class='circle d-flex justify-content-center align-items-center' (click)='deleteAisle(aisle.index)' style='cursor:pointer'>
+					<i class='fa fa-times'></i>
+				</div>
+			</div>
+		</li>
+	</ul>
+
+	<p class='m-0 text-center' *ngIf='aisles.length == 0'>You do not have any aisles yet</p>
+</div>
