--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -1,3 +1,5 @@
+
+
  .container-fluid
  {
  	position:relative;
@@ -20,23 +22,28 @@ div.navtoggle
     left:3vh;
 	cursor:pointer;
 	padding:10px 0;
-	width:25px;
-	z-index:1;
+	width:19px;
+	z-index:9999;
 }
 
 div.navtoggle span, div.navtoggle span:after, div.navtoggle span:before
 {
 	position:absolute;
 	  display: block;
-	  width:100%;
 	  height:2px;
 	  background: #fff;
+}
+
+div.navtoggle span
+{
+	width:100%;
 }
 
 div.navtoggle span:after, div.navtoggle span:before
 {
 	  top:-8px;
 	  left:0;
+	  width:125%;
 	  content: '';
 	  background: #fff;
 }
@@ -44,9 +51,41 @@ div.navtoggle span:after, div.navtoggle span:before
 div.navtoggle span:before
 {
 	top:8px;
+	width:75%;
 }
 
  .tab-body
  {
  	padding-top:20vh;
  }
+
+
+@media(max-width:991px)
+{
+	.sidebar-container
+	{
+		position:absolute;
+		top:0;
+		left:-50%;
+		width:50% !important;
+		z-index:999;
+		background:url("../../../assets/Images/Home/noisy_net.png");
+		transition:left 0.5s ease-out;
+	}
+
+
+	.sidebar-container.active
+	{
+		left:0%;
+	}
+}
+
+
+@media(max-width:576px)
+{
+	.sidebar-container
+	{
+		left:-75%;
+		width:75% !important;
+	}
+}
