--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -20,6 +20,9 @@
 			<li class='mb-3 p-2' (click)='setActiveTab("getCracking", true)' [class.active]='tabs.getCracking'>
 				<a class='text-white'>Get Cracking</a>
 			</li>
+			<li class='mb-3 p-2' (click)='setActiveTab("postings", true)' [class.active]='tabs.postings' *ngIf='showPostings'>
+				<a class='text-white'>Postings</a>
+			</li>
 			
 		</ul>
 	</div>
