--- a/src/app/components/steward/steward.component.html
+++ b/src/app/components/steward/steward.component.html
@@ -1,2 +1,6 @@
 
-<input type="text" name="name" value="{{ name }}">
+
+<div class='d-flex align-items-center justify-content-between'>
+	<input type="text" name="name" value="{{ name }}" class='px-1 mr-2' (input)='verifyName($event)'>
+	<i class='fa fa-check d-none' [class.d-inline]='showCheck' (click)='emitChange()'></i>
+</div>
