--- a/src/app/components/get-cracking/get-cracking.component.html
+++ b/src/app/components/get-cracking/get-cracking.component.html
@@ -18,10 +18,7 @@
 				</select>
 			</div>
 			<div class='form-group mb-4'>
-				<select class='form-control' formControlName='numPostings' (change)='changeNumPostings($event)'>
-					<option value='1'>1</option>
-					<option value='2' selected>2</option>
-				</select>
+				<input type="text" formControlName='numPostings' class='form-control' value='2' readonly>
 			</div>
 			<div class='form-group'>
 				<button type="submit" class='p-2 text-white' [disabled]='setupForm.invalid'>Post</button>
