Added Postings download functionality in excel format

--- a/src/app/components/postings/postings.component.html
+++ b/src/app/components/postings/postings.component.html
@@ -23,4 +23,8 @@
 		</li>
 	</ul>
 
+	<div class='download-icon' (click)='downloadPostings()'>
+		<img src="../../../assets/Images/Postings/download.svg">
+	</div>
+
 </div>
