--- a/src/app/components/steward/steward.component.html
+++ b/src/app/components/steward/steward.component.html
@@ -2,5 +2,5 @@
 
 <div class='d-flex align-items-center justify-content-between'>
 	<input type="text" name="name" value="{{ name }}" class='mr-2' (input)='verifyName($event)'>
-	<i class='fa fa-check d-none' [class.d-inline]='showCheck' (click)='emitChange()'></i>
+	<i class='fa fa-check d-none mt-1 mt-sm-0' [class.d-inline]='showCheck' (click)='emitChange()'></i>
 </div>
