--- a/src/app/components/postings/postings.component.css
+++ b/src/app/components/postings/postings.component.css
@@ -52,3 +52,34 @@
 	font-size:1.1em;
 }
 
+
+.download-icon
+{
+	position:fixed;
+	bottom:7vh;
+	right:7vw;
+	cursor:pointer;
+}
+
+
+img
+{
+	width:50px;
+	height:50px;
+}
+
+
+
+@media(max-width:567px)
+{
+	.elevation
+	{
+		width:35px;
+		height:35px;
+	}
+
+	.elevation p
+	{
+		font-size:1em;
+	}
+}
