--- a/src/app/components/steward/steward.component.css
+++ b/src/app/components/steward/steward.component.css
@@ -19,3 +19,13 @@ input
 	cursor:pointer;
 	z-index:9999;
 }
+
+
+@media(max-width:567px)
+{
+	.fa-check
+	{
+		position: relative;
+		left:-10px;
+	}
+}
