--- a/src/app/components/get-cracking/get-cracking.component.html
+++ b/src/app/components/get-cracking/get-cracking.component.html
@@ -8,7 +8,7 @@
 
 	<div class='get-cracking-main p-3'>
 		
-		<form [formGroup]='setupForm' (ngSubmit)='postStewards(setupForm)'>
+		<form [formGroup]='setupForm' (ngSubmit)='postStewards()'>
 			<div class='form-group mb-4'>
 				<select class='form-control service-type custom-select' formControlName='serviceType' (change)='changeServiceType($event)'>
 					<option value='Communion Service' selected>Communion Service</option>
