Refactoring + fixed bugs

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 
 <div class='w-100 text-white sidebar-body d-flex flex-column justify-content-center p-4'>
 	
-	<div class='sidebar-main'>
+	<div class='sidebar-main p-2'>
 		<p class='p-0 mb-4 header-text'><a routerLink=''>The Place of His Love</a></p>
 
 		<ul class='list-unstyled'>
