--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -2,7 +2,7 @@
  {
  	position:relative;
  	height:100vh;
- 	background:url("../../../assets/Images/Home/noisy_net.png");
+ 	background:url("/assets/Images/Home/noisy_net.png");
  }
 
  .overlay
@@ -12,7 +12,6 @@
  	left:0;
  	width:100%;
  	height:100%;
- 	/*background:rgba(0,0,0,0.03);*/
  }
 
 
