--- a/src/app/components/file-upload/file-upload.component.html
+++ b/src/app/components/file-upload/file-upload.component.html
@@ -3,13 +3,14 @@
   <img src='/assets/Images/AddSteward/file.png' alt='excel-icon' class='ml-1' width='48px' height='48px'>
   <div class='d-flex flex-column align-items-center'>
     <p class='m-0' (click)='clickFileInput()'>Browse</p>
+    <small class='m-0 text-center text-muted'>- {{ type }} -</small>
     <input type='file' #fileInput (change)='validateFile($event.target.files)' hidden>
     <small class='text-center text-muted'>supports excel/.xlsx files</small>
   </div>
 </div>
 <div *ngIf='hasFile' class='d-flex align-items-center px-3' style='height:100%'>
   <div class='d-flex flex-column' style='width:65%;'>
-    <p class='m-0 mb-1 font-weight-bold'>communion_unit_att</p>
+    <p class='m-0 mb-1 font-weight-bold'>{{ fileName }}</p>
     <p class='m-0 text-muted' (click)='removeFile()'>remove</p>
   </div>
   <div class='d-flex justify-content-end' style='width:35%;'>
