--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -15,7 +15,7 @@
 		<div class='col-11 col-md-8 col-lg-5 tab-body' [class.alt-padding]='tabs.postings'>
 			<app-add-aisle *ngIf="tabs.addAisles"></app-add-aisle>
 			<app-view-aisle *ngIf='tabs.viewAisles'></app-view-aisle>
-			<app-add-steward *ngIf='tabs.addSteward' (attendanceUpload)='toggleDisplayAttendanceUpload()'></app-add-steward>
+			<app-add-steward *ngIf='tabs.addSteward' (upload)='toggleDisplayUpload($event)'></app-add-steward>
 			<app-view-stewards *ngIf='tabs.viewStewards'></app-view-stewards>
 			<app-get-cracking *ngIf='tabs.getCracking' (postings)='togglePostings()'></app-get-cracking>
 			<app-postings *ngIf='tabs.postings' (search)='toggleSearch()' [display]='displaySearch'></app-postings>
@@ -23,8 +23,8 @@
 	</div>
 </div>
 
-<div class='attendance-file-parent text-white' [class.active]='displayAttendanceUpload'>
-	<app-file-upload (uploaded)='toggleDisplayAttendanceUpload()'></app-file-upload>
+<div class='attendance-file-parent text-white' [class.active]='displayUpload'>
+	<app-file-upload (uploaded)='toggleDisplayUpload()' [type]='type'></app-file-upload>
 </div>
 
 <div class='search-container px-0' [class.active]='displaySearch'>
