--- a/src/app/components/postings/postings.component.html
+++ b/src/app/components/postings/postings.component.html
@@ -20,15 +20,15 @@
 			<div class='d-flex justify-content-center align-items-center p-2 elevation my-1'>
 				<p class='m-0'>{{ getRow(i, selectedAisle.postings.length) }}</p>
 			</div>
-		</li>
+		</li> 
 	</ul>
 
 	<div class='action-icons d-flex flex-column'>
 		<div class='search-icon mb-3' (click)='displaySearch()'>
-			<img src="../../../assets/Images/Postings/search.svg">
+			<img src="/assets/Images/Postings/search.svg" alt='search-icon'>
 		</div>
 		<div class='download-icon' (click)='downloadPostings()'> 
-			<img src="../../../assets/Images/Postings/download.svg">
+			<img src="/assets/Images/Postings/download.svg" alt='download-icon'>
 		</div>
 	</div>
 
